--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -4,10 +4,9 @@
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
-  line-height: 40px;
+  line-height: 39px;
   color: #000000;
   padding: 0 0;
   border: none;
-  border-bottom: 1px solid #000000;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
-
