--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,7 +3,7 @@
   width: 100%;
   padding-bottom: 41px;
   box-sizing: border-box;
-  border-bottom: 1px solid #545454;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   font-style: normal;
 }
