--- a/blocks/page/__container/page__container.css
+++ b/blocks/page/__container/page__container.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  margin: 45px auto 60px;
+  padding: 45px 0 60px;
   background-color: black;
   color: #FFFFFF;
   font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
@@ -26,6 +26,6 @@
 
 @media screen and (max-width: 544px){
   .page__container{
-    padding: 28px 19px 36px;
+    padding: 28px 0 36px;
   }
 }
