--- a/blocks/photo-card/__description/photo-card__description.css
+++ b/blocks/photo-card/__description/photo-card__description.css
@@ -1,11 +1,10 @@
-.photo-grid__figcaption{
+.photo-card__description{
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
-  padding: 25px 20px 30px 21px;
-  height: 80px;
+  padding: 25px 20px 31px 21px;
   background-color: #FFFFFF;
   color: black;
   width: 100%;
