--- a/blocks/photo-card/__image-container/photo-card__image-container.css
+++ b/blocks/photo-card/__image-container/photo-card__image-container.css
@@ -1,7 +1,6 @@
-.photo-grid__image{
+.photo-card__image-container{
   width: 100%;
-  max-height: 282px;
-  object-fit: cover;
+  overflow: hidden;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
