--- a/blocks/photo-card/__name/photo-card__name.css
+++ b/blocks/photo-card/__name/photo-card__name.css
@@ -1,11 +1,11 @@
-.photo-grid__name{
+.photo-card__name{
   max-width: 200px;
   margin: 0 0;
   font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
-  line-height: 29px;
+  line-height: 23px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
