--- a/blocks/photo-card/photo-card.css
+++ b/blocks/photo-card/photo-card.css
@@ -1,6 +1,10 @@
-.photo-grid__item{
+.photo-card{
   width: 100%;
   margin: 0 auto;
   min-width: 262px;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
+
