--- a/blocks/popup/__submit-btn/popup__submit-btn.css
+++ b/blocks/popup/__submit-btn/popup__submit-btn.css
@@ -1,22 +1,23 @@
 .popup__submit-btn{
-  height: 50px;
+  width: 100%;
+  box-sizing: border-box;
   background: #000000;
   border-radius: 2px;
   font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
-  line-height: 22px;
+  line-height: 18px;
+  padding-top: 14px;
+  padding-bottom: 18px;
   text-align: center;
   color: #FFFFFF;
   border: none;
-  padding: 0 0;
 }
 @media screen and (max-width: 544px){
   .popup__submit-btn{
-    height: 46px;
     font-size: 14px;
-    line-height: 17px;
+    padding-bottom: 14px;
   }
 }
 .popup__submit-btn:hover{
