--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -4,6 +4,10 @@
   font-weight: 500;
   font-size: 42px;
   line-height: 39px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 400px;
 }
 @media screen and (max-width: 986px){
   .profile__name{
