--- a/blocks/photo-card/__image/photo-card__image.css
+++ b/blocks/photo-card/__image/photo-card__image.css
@@ -2,10 +2,7 @@
   width: 100%;
   max-height: 282px;
   object-fit: cover;
-  transition: all 0.5s ease-out;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
-.photo-card__image:hover{
-  transform: scale(1.1);
-  cursor: pointer;
-  opacity: 0.9;
-}
+
