--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -10,6 +10,7 @@
   box-sizing: border-box;
   background-color: #FFFFFF;
   border-radius: 10px;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
 }
 
 @media screen and (max-width: 544px){
