--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -15,6 +15,6 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding-top: 38px;
+    padding: 38px 19px 0;
   }
 }
