--- a/blocks/photo-card/__image/photo-card__image.css
+++ b/blocks/photo-card/__image/photo-card__image.css
@@ -1,6 +1,7 @@
 .photo-card__image{
+  position: relative;
   width: 100%;
-  max-height: 282px;
+  min-height: 282px;
   object-fit: cover;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
