--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,5 @@
 .popup{
-  display: none;
+  display: flex;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -8,6 +8,9 @@
   align-items: center;
   top: 0;
   left:0;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.5s linear, visibility 0.5s linear;
   font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   font-style: normal;
   color: #000000;
