--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -4,9 +4,10 @@
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
-  line-height: 39px;
+  line-height: 14px;
+  height: 27px;
   color: #000000;
-  padding: 0 0;
+  padding: 0 0 13px 0;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
