--- a/pages/index.css
+++ b/pages/index.css
@@ -34,10 +34,14 @@
 @import url('../blocks/popup/__input/popup__input.css');
 @import url('../blocks/popup/__input/_field/popup__input_field_job.css');
 @import url('../blocks/popup/__input/_field/popup__input_field_name.css');
+@import url('../blocks/popup/__input/_type/popup__input_type_error.css');
 @import url('../blocks/popup/__submit-btn/popup__submit-btn.css');
+@import url('../blocks/popup/__submit-btn/_disabled/popup__submit-btn_disabled.css');
 @import url('../blocks/popup/_is-opened/popup_is-opened.css');
 @import url('../blocks/popup/__image-container/popup__image-container.css');
 @import url('../blocks/popup/__title-image/popup__title-image.css');
 @import url('../blocks/popup/__image/popup__image.css');
+
+@import url('../blocks/popup/__error/__error.css');
 
 @import url('../blocks/footer/footer.css');
