--- a/src/blocks/photo-card/__trash/photo-card__trash.css
+++ b/src/blocks/photo-card/__trash/photo-card__trash.css
@@ -12,5 +12,5 @@
 .photo-card__trash:hover{
   background-image: url("../../../images/trash-hover.svg");
   cursor: pointer;
-  transition: 0.3s;
+  transition: 0.3s ease;
 }
