--- a/src/blocks/photo-card/__description/photo-card__description.css
+++ b/src/blocks/photo-card/__description/photo-card__description.css
@@ -2,9 +2,10 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  min-height: 79px;
   justify-content: space-between;
   box-sizing: border-box;
-  padding: 25px 20px 31px 21px;
+  padding: 0;
   background-color: #FFFFFF;
   color: black;
   width: 100%;
