--- a/src/blocks/photo-card/__likes-counter/photo-card__likes-counter.css
+++ b/src/blocks/photo-card/__likes-counter/photo-card__likes-counter.css
@@ -1,11 +1,11 @@
-.photo-card__name{
-  max-width: 200px;
-  margin-left: 21px;
-  margin-bottom: 31px;
+.photo-card__likes-counter{
+  max-width: 40px;
+  margin: 3px 0 0;
   font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   font-style: normal;
-  font-weight: 900;
-  font-size: 24px;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 16px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
