--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,6 +1,8 @@
 .profile__avatar{
   object-fit: cover;
-  max-height: 120px;
-  max-width: 120px;
+  height: 120px;
+  width: 120px;
+  position: relative;
   border-radius: 50%;
 }
+
