--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -8,7 +8,9 @@
 @import url('../blocks/header/__logo/header__logo.css');
 
 @import url('../blocks/profile/profile.css');
+@import url('../blocks/profile/__avatar-container/profile__avatar-container.css');
 @import url('../blocks/profile/__avatar/profile__avatar.css');
+@import url('../blocks/profile/__avatar-btn/__avatar-btn.css');
 @import url('../blocks/profile/__text/profile__text.css');
 @import url('../blocks/profile/__name/profile__name.css');
 @import url('../blocks/profile/__info/profile__info.css');
@@ -21,7 +23,11 @@
 @import url('../blocks/photo-card/__image/photo-card__image.css');
 @import url('../blocks/photo-card/__description/photo-card__description.css');
 @import url('../blocks/photo-card/__name/photo-card__name.css');
+
+@import url('../blocks/photo-card/__like-container/photo-card__like-container.css');
 @import url('../blocks/photo-card/__like/photo-card__like.css');
+@import url('../blocks/photo-card/__likes-counter/photo-card__likes-counter.css');
+
 @import url('../blocks/photo-card/__like/_active/photo-card__like_active.css');
 @import url('../blocks/photo-card/__trash/photo-card__trash.css');
 
@@ -41,6 +47,8 @@
 @import url('../blocks/popup/__image-container/popup__image-container.css');
 @import url('../blocks/popup/__title-image/popup__title-image.css');
 @import url('../blocks/popup/__image/popup__image.css');
+
+@import url('../blocks/popup/__confirm-title/popup__confirm-title.css');
 
 @import url('../blocks/popup/__error/__error.css');
 
